Fix first mobile footer link spacing

--- a/docs/static/style.css
+++ b/docs/static/style.css
@@ -2332,6 +2332,10 @@ nav a {
         padding-left: 0;
     }
 
+    .site-footer__nav li:first-child a {
+        padding-left: 12px;
+    }
+
     .logo {
         height: 30px;
         max-width: calc(100vw - 125px);
